fix margin gap between projects

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@
 .section-works .container {
   display: grid;
   grid-template-columns: 1fr;
+  gap: 3.2rem;
 }
 
 .secondary-heading {
@@ -111,7 +112,6 @@
   border-radius: 10px;
   text-align: center;
   padding-bottom: 3.6rem;
-  margin-bottom: 3.6rem;
 }
 
 .project img {
